hphp/hack/test/typecheck/async_function_explicit_return_type_error.php.exp
File "async_function_explicit_return_type_error.php", line 16, characters 16-24:
Was expecting an Awaitable return type hint (Typing[4174])
